Edited wiki page through web user interface.

--- a/wiki/TestScript.wiki
+++ b/wiki/TestScript.wiki
@@ -111,17 +111,17 @@ _Expected:_ Error message should be displayed indicating that the confirmation p
 
 Enter `NowWeAreTalking!!!` and wait for a few seconds.
 
-_Expected:_ No validation messages should be displayed.
-_Expected:_ The password fields should be hidden.
-_Expected:_ The `Master password cached.` should appear.
-_Expected:_ A warning message should appear at the top indicating that all unsaved data will be cleared in 30 seconds. Please note that the timeout is set to 30 seconds only in development. It is several minutes in the production environment.
+_Expected:_ No validation messages should be displayed.<br/>
+_Expected:_ The password fields should be hidden.<br/>
+_Expected:_ The `Master password cached.` should appear.<br/>
+_Expected:_ A warning message should appear at the top indicating that all unsaved data will be cleared in 30 seconds. Please note that the timeout is set to 30 seconds only in development. It is several minutes in the production environment.<br/>
 _Expected:_ An Ajax message is sent to the server with the encrypted key (see `Technical information` section).
 
 Wait for 30 seconds.
 
-_Expected:_ Warning message should be displayed that all unsaved sensitive data has been cleared.
-_Expected:_ The bar stating that the master password is cached should disappear.
-_Expected:_ The password field should appear.
+_Expected:_ Warning message should be displayed that all unsaved sensitive data has been cleared.<br/>
+_Expected:_ The bar stating that the master password is cached should disappear.<br/>
+_Expected:_ The password field should appear.<br/>
 _Expected:_ The `Clear text` field should be read-only and contain a message stating that it will update automatically once the correct password has been entered.
 
 Click `Save`.
@@ -138,15 +138,15 @@ _Expected:_ An error message should appear that the password is not correct.
 
 Enter `NowWeAreTalking!!!` as password and wait for a few seconds.
 
-_Expected:_ No validation messages should be displayed.
-_Expected:_ The password fields should be hidden.
-_Expected:_ The `Master password cached.` should appear.
-_Expected:_ A warning message should appear at the top indicating that all unsaved data will be cleared in 30 seconds. Please note that the timeout is set to 30 seconds only in development.
+_Expected:_ No validation messages should be displayed.<br/>
+_Expected:_ The password fields should be hidden.<br/>
+_Expected:_ The `Master password cached.` should appear.<br/>
+_Expected:_ A warning message should appear at the top indicating that all unsaved data will be cleared in 30 seconds. Please note that the timeout is set to 30 seconds only in development.<br/>
 _Expected:_ The `Clear text` field should be in edit mode, i.e. show the `Read` button and and a text area. The message should disappear from the text area and it should be editable.
 
 Click `Save`.
 
-_Expected:_ A general warning message at the top should appear stating that there are warnings.
+_Expected:_ A general warning message at the top should appear stating that there are warnings.<br/>
 _Expected:_ A warning message should appear near `Clear text` stating that the text is empty.
 
 Click on the cross of the general warning message.
@@ -155,15 +155,16 @@ _Expected:_ The general warning message should disappear.
 
 Click `Save`.
 
-_Expected:_ A general warning message at the top should appear stating that there are warnings.
+_Expected:_ A general warning message at the top should appear stating that there are warnings.<br/>
 _Expected:_ A warning message should appear near `Clear text` stating that the text is empty.
 
 Click `Save` again.
 
-_Expected:_ An information message should appear that the note has been added.
-_Expected:_ The `Encrypted text` should get updated. 
-_Expected:_ An Ajax message (see `Technical information` section) should be sent to the server with the encrypted text.
-_Expected:_ The `Clear text` should in read mode, i.e. show the `Edit` button and no text area.
+_Expected:_ An information message should appear that the note has been added.<br/>
+_Expected:_ The `Encrypted text` should get updated.<br/>
+_Expected:_ An Ajax message (see `Technical information` section) should be sent to the server with the encrypted text.<br/>
+_Expected:_ The `Clear text` should in read mode, i.e. show the `Edit` button and no text area.<br/>
+_Expected:_ The note title updates to `Test 1`.
 
 Click `Notes`.
 
@@ -171,7 +172,7 @@ _Expected:_ One note called `Test 1` should be listed.
 
 Click `Add` and enter `Test 2` as name.
  
-_Expected:_ The `Clear text` area should be in edit mode and empty (assuming that the password is still cached).
+_Expected:_ The `Clear text` area should be in edit mode and empty (assuming that the password is still cached).<br/>
 _Expected:_ The `Encrypted text` area should show message indicating that it will be updated after clear text has been entered.
 
 Click into the `Clear text` area.
@@ -180,26 +181,33 @@ _Expected:_ An information message should appear that the clear text should be m
 
 Enter `Test tex` as `Clear text` and wait a few seconds.
 
-_Expected:_ A warning message should appear indicating that all unsaved sensitive data will be cleared in 30 seconds and a count down should begin.
+_Expected:_ A warning message should appear indicating that all unsaved sensitive data will be cleared in 30 seconds and a count down should begin.<br/>
 _Expected:_ The `Encrypted text` area should show the encrypted text.
 
 Add a `t` to the clear text  and wait a few seconds.
 
-_Expected:_ The count down should be reset.
-_Expected:_ The `Encrypted text` area should update with the new encrypted text.
+_Expected:_ The count down should be reset.<br/>
+_Expected:_ The `Encrypted text` area should update with the new encrypted text.<br/>
 _Expected:_ The `Save` button should show no underline.
 
 Click `Save` and wait for 30 seconds.
 
-_Expected:_ An information message should appear that the note has been added.
-_Expected:_ The `Encrypted text` should get updated. 
-_Expected:_ An Ajax message (see `Technical information` section) should be sent to the server with the encrypted text.
-_Expected:_ The `Clear text` should in read mode, i.e. show the `Edit` button and no text area.
+_Expected:_ An information message should appear that the note has been added.<br/>
+_Expected:_ The `Encrypted text` should get updated.<br/>
+_Expected:_ An Ajax message (see `Technical information` section) should be sent to the server with the encrypted text.<br/>
+_Expected:_ The `Clear text` should in read mode, i.e. show the `Edit` button and no text area.<br/>
 _Expected:_ The `Clear text` should show a message indicating that it will update automatically once the correct password has been entered. It should not show `Test text`
+_Expected:_ The note title updates to `Test 2`.
 
 Enter `NowWeAreTalking!!!` as password and wait for a few seconds.
 
-_Expected:_ The `Clear text` field should show `Test text`.
-_Expected:_ The `Clear text` field should in read mode, i.e. show the `Edit` button and no text area. 
+_Expected:_ The `Clear text` field should show `Test text`.<br/>
+_Expected:_ The `Clear text` field should in read mode, i.e. show the `Edit` button and no text area.
 
+Click `Notes`.
 
+_Expected:_ Two notes called `Test 1` and `Test 2` should be listed.
+
+Select `Test 1`.
+
+ 
